Fixed editing group name and hide menu buttons when collapsed

--- a/src/app/group.component.css
+++ b/src/app/group.component.css
@@ -64,6 +64,6 @@ input{
     height: 40px;
 }
 .editingName{
-    background-color: red;
+    border: 1px solid black;
     
 }
